[tool.poetry]
name = "hackbox"
version = "0.0.1"
description = ""
authors = ["simonmoesorensen <moe.simon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aubio = "^0.4.9"
librosa = "^0.9.2"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
